--- a/vercel.json
+++ b/vercel.json
@@ -13,8 +13,19 @@
         {
           "key": "Content-Security-Policy",
           "value": "upgrade-insecure-requests"
+        },
+        {
+          "key": "Access-Control-Allow-Origin",
+          "value": "*"
+        },
+        {
+          "key": "Strict-Transport-Security",
+          "value": "max-age=31536000; includeSubDomains"
         }
       ]
     }
-  ]
+  ],
+  "env": {
+    "NEXT_PUBLIC_API_URL": "https://13.201.20.66:3000"
+  }
 }
